--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.OrcamentoFacilFacil"
         tools:targetApi="31">
         <activity
+            android:name=".activity.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.OrcamentoFacilFacil" />
+        <activity
             android:name=".activity.CadastroActivity"
             android:exported="false" />
         <activity
@@ -20,8 +25,8 @@
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/Theme.Intro"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
