--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.OrcamentoFacilFacil"
         tools:targetApi="31">
         <activity
+            android:name=".activity.DespesaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ReceitasActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
