--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.DespesaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/despesaTheme"/>
         <activity
             android:name=".activity.ReceitasActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/receitaTheme"
+            />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false"
