--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     //Material Intro
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+
     //Grandle
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
